# BlackJackAdvisor

./: .gitignore  CONCLUSION.md  README.md  pyproject.toml  requirements.txt  setup.py
data/deviations/: standard.json
data/rules/: atlantic_city.json  vegas_downtown.json  vegas_strip.json
data/strategies/: h17_das.json  s17_das.json
docs/: phase8.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionButtons.tsx  Card.tsx  CardInputGrid.tsx  CountDisplay.tsx  ExitWarning.tsx  HandFlowController.tsx  Layout.tsx
frontend/src/context/: GameContext.tsx
frontend/src/pages/: Home.tsx  Shadowing.tsx  Training.tsx
frontend/src/styles/: tokens.ts
interfaces/: __init__.py  live_api.py  simulator.py
research/: ablation_runner.py  design_doc.md  final_report.py  study_confidence.py  study_model_error.py  study_wonging_realism.py  validate_defense.py  verify_theory.py
scripts/: debug_wonging.py  generate_tables.py  test_web_api.py  verify_exit_signal.py  verify_live.py
src/: __init__.py
src/betting/: __init__.py  engine.py  estimator.py  kelly.py
src/config/: __init__.py  loader.py
src/core/: __init__.py  primitives.py  types.py
src/state/: __init__.py  manager.py
src/strategy/: __init__.py  deviations.py  engine.py  lookup.py
src/web/: __init__.py  app.py  manager.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_betting.py  test_config.py  test_core.py  test_state.py  test_strategy.py
tests/validation/: test_truth_tests.py
